# docsense

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
configs/: default.yaml  header-strategy.yaml  no-rerank.yaml
docs/: architecture.md  eval-methodology.md  phase-2-4-scope.md  phase-3-block-3b2-plan.md  phase-3-block-3c-plan.md  phase-3-scope.md
evaluations/: README.md  performance.md
evaluations/analyses/: 2026-05-06-bakeoff-investigation.md  2026-05-06-baseline-generation-eval.md  2026-05-08-phase3-v1-finetune-eval.md
evaluations/baselines/: phase1_chunking.json  phase3_v1_finetune.json  pre_phase3_generation_base.json
evaluations/datasets/training/: pilot_input.json  refusal_topic_seeds.json  training_dataset.json
evaluations/datasets/training/pilot/: comparison.md  haiku.json  opus.json  query_gen_validation.md  sonnet.json  sonnet_thinking.json
evaluations/datasets/training/query_pool/: filter_report.md  preview.md  query_pool.jsonl
evaluations/eval_sets/: structural.json
evaluations/manual-runs/: 2026-05-06-smoke.md  2026-05-06-smoke.txt
evaluations/reports/: bakeoff-2026-05-05-hybrid-rerank.json  bakeoff-20260506-dense-curated.json  bakeoff-20260506-dense-structural.json  bakeoff-20260506-hybrid-curated.json  bakeoff-20260506-hybrid-rerank-curated.json  bakeoff-20260506-hybrid-rerank-structural.json  bakeoff-20260506-hybrid-structural.json  generation-20260506T060710Z-curated.json  generation-20260506T060710Z-structural.json  generation-20260506T064240Z-no-answer.json  generation-20260506T091119Z-curated.json  generation-20260506T093302Z-structural.json  generation-20260506T102436Z-no-answer.json  generation-20260506T114603Z-curated.json  generation-20260506T114603Z-no-answer.json  generation-20260506T114603Z-structural.json
evaluations/reports/phase3-baseline-modal/20260508T114905Z/: generation-20260508T114905Z-curated.json  generation-20260508T114905Z-no-answer.json  generation-20260508T114905Z-structural.json
evaluations/reports/phase3-v1-adapter/20260508T111606Z/: generation-20260508T111606Z-curated.json  generation-20260508T111606Z-no-answer.json  generation-20260508T111606Z-structural.json
notebooks/: chunking_comparison.ipynb
scripts/: build_index.py  build_query_pool.py  build_training_dataset.py  fetch_docs.py  generate_structural_queries.py  run_bakeoff.py  run_generation_eval.py  run_generation_eval_modal.py  search.py  smoke_generate.py  train_lora.py  train_lora_modal.py
src/docsense/: __init__.py  config.py
src/docsense/chunking/: __init__.py  base.py  fixed.py  header.py  recursive.py
src/docsense/embedding/: __init__.py  embedder.py
src/docsense/evaluation/: __init__.py  eval_queries.py  judge.py  llama_judge.py  no_answer_queries.py  retrieval_metrics.py  rule_based.py  structural_queries.py
src/docsense/finetuning/: __init__.py  chunk_classifier.py  config.py  dataset.py  query_filters.py  query_generation.py  refusal_seeds.py  trainer.py
src/docsense/generation/: __init__.py  context.py  generator.py  prompt.py  types.py
src/docsense/ingestion/: __init__.py  fetcher.py  loader.py
src/docsense/reranking/: __init__.py  reranker.py
src/docsense/retrieval/: __init__.py  dense.py  hybrid.py  sparse.py
src/docsense/tracing/: __init__.py
tests/: conftest.py
tests/integration/: test_generation_pipeline.py  test_hybrid_rerank.py
tests/snapshots/: prompt_default.json  prompt_default.txt
tests/unit/: test_build_query_pool.py  test_build_training_dataset.py  test_chunk_classifier.py  test_chunking.py  test_config.py  test_context_assembly.py  test_dense_retrieval.py  test_embedder.py  test_finetuning_config.py  test_finetuning_dataset.py  test_finetuning_trainer.py  test_fixed_chunking.py  test_generation_types.py  test_generator.py  test_header_chunking.py  test_hybrid_retrieval.py  test_judge.py  test_llama_judge.py  test_loader.py  test_prompt_construction.py  test_query_filters.py  test_query_generation.py  test_recursive_chunking.py  test_refusal_seeds.py  test_reranker.py  test_retrieval_metrics.py  test_rule_based.py  test_run_generation_eval.py  test_sparse_retrieval.py  test_structural_queries.py
