[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsense"
version = "0.1.0"
description = "Production-grade RAG system with fine-tuned LLM for technical documentation Q&A"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Seth Zapata" }]
keywords = ["rag", "retrieval-augmented-generation", "fine-tuning", "nlp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "sentence-transformers>=2.6.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "wandb>=0.16.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff==0.15.8",
    "mypy==1.19.1",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0",
]
gpu = [
    # bitsandbytes is the only real GPU dep we need: NF4 4-bit
    # quantization for the generation model so a 7-8B Instruct fits
    # in 12 GB VRAM. It's a runtime requirement when
    # GenerationConfig.use_4bit_quantization is True (the default).
    "bitsandbytes>=0.43.0",
    # Modal: serverless GPU compute for Phase 3 LoRA fine-tuning runs.
    # Local training on RTX 4070 works (~5-8 hr per run) but locks the
    # machine for hours; offloading to Modal A10G (~$1.10/hr, 24 GB
    # VRAM, plenty for 7B QLoRA) cuts wall time to ~30-45 min and keeps
    # the dev machine usable. CLI auth is browser-based, persisted to
    # ~/.modal.toml. Optional — local training paths in
    # `scripts/train_lora.py` will work without modal installed.
    "modal>=1.0.0",
    # Note: faiss-gpu is intentionally NOT here. The package is
    # chronically unavailable on PyPI for most Python/CUDA combinations
    # (FAISS' GPU wheels have shifted between conda-only, third-party
    # community wheels like faiss-gpu-cu12, and platform-specific
    # builds). For our index sizes (~12K chunks for the HF Transformers
    # docs) faiss-cpu (in the base deps) handles searches in milliseconds —
    # the bottleneck is LLM inference, not vector search. If the corpus
    # ever grows to millions of chunks, revisit and pin the appropriate
    # GPU wheel for the user's CUDA version.
]

[project.urls]
Repository = "https://github.com/sethzapata/docsense"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["docsense"]

[tool.mypy]
python_version = "3.12"
files = ["src/docsense"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# Third-party libraries without type stubs. Listed explicitly (with .*
# wildcards to cover submodules like `sentence_transformers.SentenceTransformer`)
# rather than globally ignored, so a future stub release will surface real
# errors instead of staying silently masked.
[[tool.mypy.overrides]]
module = [
    "faiss",
    "faiss.*",
    "rank_bm25",
    "rank_bm25.*",
    "sentence_transformers",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["docsense"]
# Intentional coverage exemptions. Each entry must be justified — bullshit
# tests just to hit a line counter degrade the suite without catching
# regressions. Adding to this list should be its own deliberate commit, not
# bundled with the feature it's excusing.
omit = [
    # Git sparse-checkout boundary. Testing this means either real network
    # calls (flaky, slow, depends on github.com) or mocking subprocess.run
    # (verifies our impl, not behavior). Implicitly tested by the
    # build_index.py script working end-to-end on real data.
    "src/docsense/ingestion/fetcher.py",
    # Static data module — just the curated eval queries list. Coverage of
    # "this list contains the items I put in it" is meaningless.
    "src/docsense/evaluation/eval_queries.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]
